Cycles- MIS gives better result with resolution superior to input HDRi's resolution #49952

Closed
opened 2016-11-06 16:32:53 +01:00 by mathieu menuet · 13 comments

System Information
All

Blender Version
Broken: 2.78a

Short description of error
Using a resolution of MIS superior to the input image gives better results. The quality should improve up to image resolution and then stay constant.

Exact steps for others to reproduce the error
Open attached .blend. Included is an HDRi from Greg Zaal under CC-BY with a resolution of 512x256 : bug mis hdr.blend
Render animation:

  • frame 1 is at 512 for MIS (should be the best result already)
    hdri0001.jpg

  • frame 2 is at 1024 = 4x more pixels, interpolated
    hdri0002.jpg

  • Frame 3 at 2048 = 16x more pixels, interpolated

hdri0003.jpg

  • Frame 4 at 4096 = 64x interpolated pixels, but still it's even better than frame 3

hdri0004.jpg

**System Information** All **Blender Version** Broken: 2.78a **Short description of error** Using a resolution of MIS superior to the input image gives better results. The quality should improve up to image resolution and then stay constant. **Exact steps for others to reproduce the error** Open attached .blend. Included is an HDRi from Greg Zaal under CC-BY with a resolution of 512x256 : [bug mis hdr.blend](https://archive.blender.org/developer/F393517/bug_mis_hdr.blend) Render animation: - frame 1 is at 512 for MIS (should be the best result already) ![hdri0001.jpg](https://archive.blender.org/developer/F393506/hdri0001.jpg) - frame 2 is at 1024 = 4x more pixels, interpolated ![hdri0002.jpg](https://archive.blender.org/developer/F393511/hdri0002.jpg) - Frame 3 at 2048 = 16x more pixels, interpolated ![hdri0003.jpg](https://archive.blender.org/developer/F393510/hdri0003.jpg) - Frame 4 at 4096 = 64x interpolated pixels, but still it's even better than frame 3 ![hdri0004.jpg](https://archive.blender.org/developer/F393505/hdri0004.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli
Author

Added subscribers: @brecht, @LukasStockner, @Sergey

Added subscribers: @brecht, @LukasStockner, @Sergey
Member

Ah, yes, I wanted to look into that.
But, I think you forgot to attach the .blend?

Ah, yes, I wanted to look into that. But, I think you forgot to attach the .blend?
Author
True :D [bug mis hdr.blend](https://archive.blender.org/developer/F393516/bug_mis_hdr.blend)
Lukas Stockner self-assigned this 2016-11-06 18:48:20 +01:00
Member

Yes, I can reproduce the issue, and it should not behave like that.
Interestingly, my first assumption was that it's due to the texture interpolation - but, when switching to closest, the difference is much higher, which makes me suspect an off-by-one bug somewhere in the sampling.

Yes, I can reproduce the issue, and it should not behave like that. Interestingly, my first assumption was that it's due to the texture interpolation - but, when switching to closest, the difference is much higher, which makes me suspect an off-by-one bug somewhere in the sampling.

This issue was referenced by blender/cycles@512a999023

This issue was referenced by blender/cycles@512a999023619926786eced4d1c0728456e41e57

This issue was referenced by f89fbf580e

This issue was referenced by f89fbf580eae6202cef9da08756fd415ca34a8f3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Okay, should work now.

To give an example how bad this bug could be:

Old code, 256spp, Closest Interpolation, Resolution 512:
old_mis512_closest_256spp.png

New code, 8spp, Closest Interpolation, Resolution 512:
new_mis512_closest_8spp.png

Regarding linear interpolation: That needs twice the image resolution right now to look good - it could be improved, but that would probably make Closest interpolation worse. Still, I guess that linear interpolation is the usual case, so I'll try hacking together a patch for piecewise-linear sampling to test the actual difference.

Okay, should work now. To give an example how bad this bug could be: Old code, 256spp, Closest Interpolation, Resolution 512: ![old_mis512_closest_256spp.png](https://archive.blender.org/developer/F393563/old_mis512_closest_256spp.png) New code, **8spp**, Closest Interpolation, Resolution 512: ![new_mis512_closest_8spp.png](https://archive.blender.org/developer/F393565/new_mis512_closest_8spp.png) Regarding linear interpolation: That needs twice the image resolution right now to look good - it could be improved, but that would probably make Closest interpolation worse. Still, I guess that linear interpolation is the usual case, so I'll try hacking together a patch for piecewise-linear sampling to test the actual difference.

Are you saying linear interpolation is worse than before? That's definitely the usual case, closest is not important for HDRI backgrounds.

Are you saying linear interpolation is worse than before? That's definitely the usual case, closest is not important for HDRI backgrounds.
Member

No, that was maybe a bit unclear - I was saying that linear interpolation at 1:1 resolution is still terrible (maybe a tiny bit better, but hard to say), while 2:1 resolution or better now is clean as well, which it wasn't before.

No, that was maybe a bit unclear - I was saying that linear interpolation at 1:1 resolution is still terrible (maybe a tiny bit better, but hard to say), while 2:1 resolution or better now is clean as well, which it wasn't before.
Author

Thanks for the quick fix Lukas. The image is much cleaner indeed :) And requiring twice the resolution only is much better.

Thanks for the quick fix Lukas. The image is much cleaner indeed :) And requiring twice the resolution only is much better.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49952
No description provided.